Add Searching
* secure empty search field shows all results
* add v.1 of abstract class for sorting and filtering
